Order/order2-deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order2-0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order2-0
  template:
    metadata:
      labels:
        app: order2-0
    spec:
      containers:
      - name: order2-0
        image: 1jashshah/order2
        ports:
        - containerPort: 80
