Order/services.yml
apiVersion: v1
kind: Service
metadata:
  name: order2-0
spec:
  selector:
    app: order2-0
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
