Order/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /order2
        pathType: Prefix
        backend:
          service:
            name: order2-0
            port:
              number: 80
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /product2
        pathType: Prefix
        backend:
          service:
            name: product2.0
            port:
              number: 80
